Restructure sources and resources.